# portfolio-optimizer

./: .gitignore  README.md  portfolio_optimizer_colab.ipynb  requirements.txt  run.sh
backend/: __init__.py  backtest.py  data_pipeline.py  optimizer.py  server.py  train_scorer.py
benchmarks/: benchmark.py
cpp/: CMakeLists.txt  build.sh  scorer.cpp  scorer_standalone
data/: cache_meta.json  price_cache.csv  scorer_model.json  scorer_model.pkl
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  Header.jsx  MetricCard.jsx  Sidebar.jsx
frontend/src/lib/: api.js  constants.js
frontend/src/pages/: Backtest.jsx  Dashboard.jsx  Frontier.jsx  Ranking.jsx
tests/: test_pipeline.py
